[refactor] java 21 updates
mod run . --recipe org.openrewrite.java.migrate.UpgradeToJava21