@@ -87,7 +87,6 @@ import java.io.*;
 import java.net.URI;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.text.NumberFormat;
 import java.util.*;
 import java.util.function.Function;
@@ -227,7 +226,7 @@ public class NativeBroker implements DBBroker {
         this.lockManager = pool.getLockManager();
         LOG.debug("Initializing broker {}", hashCode());
 
-        this.dataDir = config.getProperty(BrokerPool.PROPERTY_DATA_DIR, Paths.get(DEFAULT_DATA_DIR));
+        this.dataDir = config.getProperty(BrokerPool.PROPERTY_DATA_DIR, Path.of(DEFAULT_DATA_DIR));
 
         nodesCountThreshold = config.getInteger(BrokerPool.PROPERTY_NODES_BUFFER);
         if(nodesCountThreshold > 0) {
@@ -724,7 +723,7 @@ public class NativeBroker implements DBBroker {
             // 1) try and load from etc/ dir
             final Path fInitCollectionConfig = pool.getConfiguration().getExistHome()
                     .map(h -> h.resolve("etc").resolve(INIT_COLLECTION_CONFIG))
-                    .orElse(Paths.get("etc").resolve(INIT_COLLECTION_CONFIG));
+                    .orElse(Path.of("etc").resolve(INIT_COLLECTION_CONFIG));
             if (Files.exists(fInitCollectionConfig)) {
                 return Files.readString(fInitCollectionConfig, UTF_8);
             }
@@ -1178,7 +1177,7 @@ public class NativeBroker implements DBBroker {
         } else {
 
             if(!collection.getURI().equalsInternal(uri)) {
-                throw new IOException(String.format("readCollectionEntry: The Collection received from the cache: %s is not the requested: %s", collection.getURI(), uri));
+                throw new IOException("readCollectionEntry: The Collection received from the cache: %s is not the requested: %s".formatted(collection.getURI(), uri));
             }
 
             entry.read(collection);
@@ -1899,8 +1898,8 @@ public class NativeBroker implements DBBroker {
             }.run();
 
             // if it is a binary document remove the content from disk
-            if (doc instanceof BinaryDocument) {
-                removeCollectionBinary(transaction, (BinaryDocument)doc);
+            if (doc instanceof BinaryDocument document) {
+                removeCollectionBinary(transaction, document);
             }
 
             docTrigger.afterDeleteDocument(this, transaction, doc.getURI());
@@ -2479,8 +2478,8 @@ public class NativeBroker implements DBBroker {
         final BlobStore blobStore = pool.getBlobStore();
         try (final InputStream is = blobStore.get(transaction, blob.getBlobId())) {
             if (is != null) {
-                if (os instanceof UnsynchronizedByteArrayOutputStream) {
-                    ((UnsynchronizedByteArrayOutputStream)os).write(is);
+                if (os instanceof UnsynchronizedByteArrayOutputStream stream) {
+                    stream.write(is);
                 } else {
                     copy(is, os);
                 }
@@ -2826,9 +2825,9 @@ public class NativeBroker implements DBBroker {
      */
     private static void copyModeAcl(final DBBroker broker, final Permission srcPermissions, final Permission destPermissions) throws PermissionDeniedException {
         PermissionFactory.chmod(broker, destPermissions, Optional.of(srcPermissions.getMode()), Optional.empty());
-        if (srcPermissions instanceof SimpleACLPermission && destPermissions instanceof SimpleACLPermission) {
+        if (srcPermissions instanceof SimpleACLPermission permission && destPermissions instanceof SimpleACLPermission) {
             PermissionFactory.chacl(destPermissions, newAcl ->
-                ((SimpleACLPermission)newAcl).copyAclOf((SimpleACLPermission)srcPermissions)
+                ((SimpleACLPermission)newAcl).copyAclOf(permission)
             );
         }
     }
@@ -3097,8 +3096,8 @@ public class NativeBroker implements DBBroker {
 
     @Override
     public void removeResource(final Txn tx, final DocumentImpl doc) throws IOException, PermissionDeniedException {
-        if (doc instanceof BinaryDocument) {
-            removeBinaryResource(tx, (BinaryDocument) doc);
+        if (doc instanceof BinaryDocument document) {
+            removeBinaryResource(tx, document);
         } else {
             removeXMLResource(tx, doc);
         }
