@@ -219,7 +219,7 @@ public class Lookup extends Function implements Optimizable, IndexUseReporter {
 
     public void setArguments(List<Expression> arguments) throws XPathException {
         steps.clear();
-        Expression path = arguments.get(0);
+        Expression path = arguments.getFirst();
         steps.add(path);
 
         Expression arg = arguments.get(1).simplify();
