@@ -23,7 +23,6 @@ package org.exist.xquery.modules.file;
 
 import java.net.URI;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import org.exist.xquery.Expression;
 import org.exist.xquery.XPathException;
@@ -51,12 +50,12 @@ public class FileModuleHelper {
     public static Path getFile(String path, final Expression expression) throws XPathException {
         if(path.startsWith("file:")){
             try {
-                return Paths.get(new URI(path));
+                return Path.of(new URI(path));
             } catch (Exception ex) { // catch all (URISyntaxException)
                 throw new XPathException(expression, path + " is not a valid URI: '"+ ex.getMessage() +"'");
             }
         } else {
-            return Paths.get(path);
+            return Path.of(path);
         }
     }
     
